tests/samples/compile_errors/jump_target/undefined_goto.bas
Attribute VB_Name = "UndefinedGoto"
Sub TestGoto()
    GoTo NotALabel
    Exit Sub
RealLabel:
    Debug.Print "ok"
End Sub
